@@ -1,3 +1,7 @@
+2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* timidity/timidity.c: Fix typo around long options
+
 2003-08-03  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* timidity/timidity.c: Hack up around long options
